Fix overflowing images

--- a/frontend/src/styles/FakePage.module.css
+++ b/frontend/src/styles/FakePage.module.css
@@ -205,7 +205,7 @@
   gap: 0em;
 }
 .fakePage article header hgroup h1 {
-  font-family: var(--ff-haim-cond);
+  font-family: var(--ff-haim-cond), var(--ff-futura);
   font-weight: 700;
   /* font-feature-settings: "ss01"; */
   font-size: clamp(1.5em, min(10vw, 12vh), 25em);
@@ -248,9 +248,8 @@
 }
 
 .fakePage article .bodyImage {
-  max-width: calc(100% + 2em);
+  max-width: 100%;
   margin: 2em 0;
-  margin-inline-start: -2em;
   display: flex;
   flex-flow: column nowrap;
   width: max-content;
